# swarm_control

./: README.md
src/swarm_control/: CMakeLists.txt  Installation.md  README.md  package.xml
src/swarm_control/launch/: empty_world.launch.py  swarm_launch.py  swarm_mpc_launch.py
src/swarm_control/models/turtlebot3_waffle/: minimal_model.sdf  model.config  model.sdf
src/swarm_control/swarm_control/: graph_observer.py  kinematic_node.py  pose_publisher_node.py
src/swarm_control/swarm_control/utils/: namespace_utils.py
src/swarm_control_msgs/: package.xml
src/swarm_control_msgs/msg/: Info.msg
swarm_control/: README.md  package.xml
swarm_control/launch/: empty_world.launch.py  swarm_launch.py
swarm_control/models/turtlebot3_waffle/: minimal_model.sdf
swarm_control/params/: minimal_bridge.yaml  waffle_bridge.yaml
swarm_control/swarm_control/: graph_observer.py  kinematic_node.py  mpc_controller.py  mpc_controller_scipy.py  pose_publisher_node.py  reference_node.py
swarm_control/urdf/: minimal_urdf.urdf  turtlebot3_waffle.urdf
swarm_control_msgs/: CMakeLists.txt  README.md
swarm_control_msgs/msg/: RBroadcast.msg
